--- a/public/Clicker.html
+++ b/public/Clicker.html
@@ -3,48 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clicker Game</title>
+    <title>Epic Clicker Game</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            font-family: 'Roboto', sans-serif;
+            background-color: #222;
+            color: #fff;
             text-align: center;
-            padding: 50px;
+            padding: 20px;
+            margin: 0;
         }
 
         .container {
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
+            flex-wrap: wrap; 
             max-width: 1200px; 
-            margin: 0 auto; 
-            background: white;
-            border-radius: 8px;
+            margin: 20px auto;
+            background: linear-gradient(135deg, #0072ff, #00c6ff);
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
             padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         .column {
             flex: 1; 
             padding: 10px;
+            margin: 10px;
+            background-color: #333;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
         }
 
-        h1 {
-            color: #333;
+        h1, h3 {
+            color: #fff;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
         }
 
         button {
             padding: 10px 20px;
-            font-size: 16px;
+            font-size: 18px;
             border: none;
             border-radius: 5px;
             background-color: #28a745;
             color: white;
             cursor: pointer;
-            margin: 5px 0; 
+            margin: 10px 0;
+            transition: background-color 0.3s, transform 0.2s;
         }
 
         button:hover {
             background-color: #218838;
+            transform: scale(1.05);
+        }
+
+        button:disabled {
+            background-color: #6c757d;
+            cursor: not-allowed;
+        }
+
+        h2 {
+            font-size: 24px;
+            margin: 10px 0;
+            text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+        }
+
+        #points {
+            font-weight: bold;
+            color: #ffd700; /* Gold color for points */
+        }
+
+        #rebirthCount {
+            font-weight: bold;
+            color: #ff4500; /* OrangeRed for rebirth count */
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                flex-direction: column;
+                padding: 10px;
+            }
+
+            .column {
+                margin: 5px 0;
+            }
         }
     </style>
 </head>
@@ -237,9 +280,9 @@
                 updatePointsDisplay();
 
                 autoClickInterval = setInterval(() => {
-                    points += clickValue * getMultiplier(); // Apply the multiplier for auto clicker points
+                    points += clickValue * getMultiplier(); // Points multiply for auto clicker
                     updatePointsDisplay();
-                }, autoClickerSpeed); // Default speed of 1000ms (1 second)
+                }, autoClickerSpeed); // Speed of auto click
             } else if (autoClickerActive) {
                 autoClickerActive = false;
                 document.getElementById('autoClickStatus').innerText = 'Auto Clicker Active: No';
@@ -251,12 +294,11 @@
         });
 
         // Auto click speed upgrades functionality
-        document.getElementById('autoSpeed05Button').addEventListener('click', () => purchaseAutoClickSpeedUpgrades(500)); // 500 ms speed
-        document.getElementById('autoSpeed02Button').addEventListener('click', () => purchaseAutoClickSpeedUpgrades(200)); // 200 ms speed
-        document.getElementById('autoSpeed001Button').addEventListener('click', () => purchaseAutoClickSpeedUpgrades(10)); // 10 ms speed
+        document.getElementById('autoSpeed05Button').addEventListener('click', () => purchaseAutoClickSpeedUpgrades(500)); // 0.5 seconds
+        document.getElementById('autoSpeed02Button').addEventListener('click', () => purchaseAutoClickSpeedUpgrades(200)); // 0.2 seconds
+        document.getElementById('autoSpeed001Button').addEventListener('click', () => purchaseAutoClickSpeedUpgrades(10)); // 0.01 seconds
 
         function purchaseAutoClickSpeedUpgrades(speed) {
-            // Checks to ensure upgrades can only be purchased once
             if (rebirths < 3) {
                 alert('You need at least 3 rebirths to purchase auto clicker speed upgrades!');
                 return;
