--- a/public/t2a20-spy-Aden.html
+++ b/public/t2a20-spy-Aden.html
@@ -129,8 +129,8 @@
 
     <div class="button-container">
         <input type="button" value="Encrypt" onclick="encryptText()">
-      <div id="message" class="message"></div>
-</div>
+       <input type="button" value="Reset" onclick="resetFields()">
+     </div>
 
     <div class="terminal">
         <textarea id="myArea02" placeholder="Your encrypted text will appear here..." class="glitch-textarea" readonly></textarea>
