--- a/public/t2a20-spy-Aden.html
+++ b/public/t2a20-spy-Aden.html
@@ -129,7 +129,7 @@
 
     <div class="button-container">
         <input type="button" value="Encrypt" onclick="encryptText()">
-       <input type="button" value="Reset" onclick="resetFields()">
+       <input type="button" value="Reset" onclick="ClearFields()">
      </div>
 
     <div class="terminal">
